--- a/index.html
+++ b/index.html
@@ -2,12 +2,12 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Receta: Arroz con leche</title>
+  <title>Receta: Arroz con leche de breyshell</title>
 </head>
 <body>
-  <h1>Receta: Arroz con leche</h1>
+  <h1>Receta: Arroz con leche gustoso</h1>
 
-  <h2>Ingredientes:</h2>
+  <h2>Ingredientes con un toque de sabor de la abuela:</h2>
   <ul>
     <li>1 taza de arroz</li>
     <li>2 tazas de agua</li>
@@ -20,7 +20,7 @@
 
   <h2>Preparación:</h2>
   <ol>
-    <li>Lava el arroz y ponlo a hervir con el agua y la canela.</li>
+    <li>Lava el arroz muy bien y ponlo a hervir con el agua y la canela.</li>
     <li>Cuando el agua se consuma, añade la leche y el azúcar.</li>
     <li>Cocina a fuego lento, revolviendo para que no se pegue.</li>
     <li>Cuando espese, agrega la leche condensada.</li>
@@ -28,6 +28,6 @@
   </ol>
 
   <p><strong>Tiempo estimado:</strong> 40 minutos</p>
-  <p><em>¡Delicioso y fácil de hacer!</em></p>
+  <p><em>¡Delicioso y fácil de hacer! con un toque de la abuela</em></p>
 </body>
 </html>
