cambios en el nombre

--- a/breyshell.html
+++ b/breyshell.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="breyshell.css">
+    <link rel="stylesheet" href="breyshell.css">ñ
     <title>Actividad breyshell</title>
   </head>
   <body>
     <h1>Análisis y desarollo de software</h1>
     <br /><br />
-    <h2>Breyshell Tatiana Gonzalez Castillo, Ficha:2874468</h2>
+    <h2>Breyshell Tatiana Gonzalez, Ficha:2874468</h2>
     <br /><br />
 
     <h3>Ingredientes:</h3>
@@ -56,6 +56,6 @@
       </li>
     </ul>
 
-    <p><em>¡Delicioso y fácil de hacer!</em></p>
+    <p><em>¡Delicioso y fácil de hacer! Gracias por su atencióngit</em></p>
   </body>
 </html>
